# visa-bulletin

./: .gitignore  LICENSE  Makefile  data.json  report.json  visa-bulletin.cabal
app/: Main.hs  Main1.hs
src/: Fetch.hs  Lib.hs  Types.hs  WritePlot.hs
test/: Spec.hs  a.html  b.html
