name:                visa-bulletin
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/freizl/visa-bulletin#readme
license:             BSD3
license-file:        LICENSE
author:              Haisheng Wu
maintainer:          freizl@gmail.com
copyright:           2016 Haisheng Wu
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
                     , html-conduit
                     , xml-conduit
                     , text
                     , aeson
  default-language:    Haskell2010

  
executable visa-bulletin
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , visa-bulletin
                     , http-conduit
                     , html-conduit
                     , xml-conduit
                     , bytestring
                     , aeson
                     , text
                     , async
  default-language:    Haskell2010

test-suite visa-bulletin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , visa-bulletin
                     , hspec
                     , html-conduit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/freizl/visa-bulletin
